ready to use jquery-ui - linked to google CDN.

--- a/smart_network/sample_storage/main/index.html
+++ b/smart_network/sample_storage/main/index.html
@@ -4,21 +4,17 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Dashboard</title>
 
-<!--<link rel="stylesheet" type="text/css" href="http://s3.ihappening.net/test_media/third_party/jquery/css/jquery-ui-1.9.2.custom.css" />-->
-
-<!--<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>-->
-<!-- <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js"></script> -->
-<!--<script type="text/javascript" src="http://s3.ihappening.net/test_media/third_party/jquery/js/jquery-ui-1.9.2.custom.min.js"></script>-->
+<link rel="stylesheet" href="/common/css/rabbit_hole.css" type="text/css" media="all" />
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
 
 <!-- head scripts -->
-
-<link rel="stylesheet" href="/common/css/rabbit_hole.css" type="text/css" media="all" />
-
 <style type="text/css">
 </style>
+<script type="text/javascript">
+</script>
 
 </head>
-
 
 <body>
 
@@ -45,7 +41,9 @@
 	</div>
 
 	<hr/>
+
 	<div id="debug_log"><a><b>LOG: </b><span id="debug_log_text"></span></a></div>
+
 	<hr/>
 </div>
 
@@ -83,8 +81,6 @@
 
 <!-- body scripts -->
 <script type="text/javascript" src="http://localhost/common/js/rabbit_hole.js"></script>
-<script type="text/javascript">
-</script>
 
 </body>
 </html>
