--- a/smart_network/sample_storage/main/index.html
+++ b/smart_network/sample_storage/main/index.html
@@ -54,21 +54,6 @@
 		</div>
 		<ul id="device_list">
 		</ul>
-
-
-		<ul id="device_list2">
-			<li>
-				<div draggable="draggable">
-					<img src="http://localhost:7000/active.png">
-					<a>[DIOS] 부엌냉장고</a>
-					<button>?</button>
-					<button>open</button>
-				</div>
-			</li>
-		</ul>
-
-
-
 	</div>
 
 	<div id="remote_control">
@@ -80,7 +65,7 @@
 </div>
 
 <!-- body scripts -->
-<script type="text/javascript" src="http://localhost/common/js/rabbit_hole.js"></script>
+<script type="text/javascript" src="/common/js/rabbit_hole.js"></script>
 
 </body>
 </html>
