--- a/smart_network/sample_storage/main/index.html
+++ b/smart_network/sample_storage/main/index.html
@@ -66,6 +66,161 @@
 
 <!-- body scripts -->
 <script type="text/javascript" src="/common/js/rabbit_hole.js"></script>
+<script type="text/javascript">
+var urlList = {};
+var currentUI = false;
+
+var UILog = (function () {
+
+	var node = document.getElementById('debug_log_text');
+
+	function log(text) {
+		node.textContent = text;
+	}
+
+	return {
+		log: log
+	};
+})();
+
+function closeRemoteUI() {
+	if (currentUI) {
+		currentUI = false;
+		var root = document.getElementById('remote_ui');
+		if (root.firstChild) {
+			root.removeChild(root.firstChild);
+		}
+	}
+}
+
+function openRemoteUI(id) {
+	closeRemoteUI();
+
+	var root = document.getElementById('remote_ui');
+	var iframe = document.createElement('iframe');
+	iframe.src = urlList[id];
+	root.appendChild(iframe);
+	currentUI = id;
+
+	document.getElementById('remote_control').style.display = 'block';
+}
+
+var deiveItemTag = ''
++'<div class="device">'
++'<img alt="-">'
++'</div>';
+
+function getDeviceListResult(data) {
+
+	var json = data;
+	if (typeof(data) === 'string') {
+		json = JSON.parse(data);
+	}
+	
+	for (var i = 0; i < json.length; ++i) {
+		var item = json[i];
+		var button = document.createElement('button');
+		button.id = item.id;
+		// location.host
+		// location.hostname
+		urlList[item.id] = location.origin + ':' + item.port;
+		button.onclick = function () {
+			openRemoteUI(this.id);
+		};
+		button.textContent = '[' + item.id + '] ' + item.nickname + ' (' + item.device + ')';
+		button.disabled = item.disabled;
+
+		var li = document.createElement('li');
+		li.appendChild(button);
+		document.getElementById('device_list').appendChild(li);
+	}
+}
+
+window.onload = function () {
+
+	rabbitHole.request('get/device/list', '', getDeviceListResult, false);
+
+	/*var xhr = new XMLHttpRequest();
+	xhr.responseType = 'json';
+	xhr.onreadystatechange = getDeviceListResult;
+	xhr.open('GET', '/do/get/device/list', true);
+	xhr.send();*/
+};
+
+
+
+document.getElementById('device_insert').onclick = function () {
+	var txt = document.getElementById('device_id').value;
+	if (txt.length > 0) {
+		var xhr = new XMLHttpRequest();
+		xhr.open('GET', '/do/device/insert', false);
+		xhr.send('id="' + txt + '"');
+		if (xhr.readyState === xhr.DONE) {
+			if (xhr.status === 200) {
+
+			} else {
+
+			}
+		}
+	}
+};
+
+document.getElementById('device_remove').onclick = function () {
+	var txt = document.getElementById('device_id').value;
+	if (txt.length > 0) {
+		var xhr = new XMLHttpRequest();
+		xhr.open('POST', '/do/device/remove', false);
+		xhr.send('id="' + txt + '"');
+		if (xhr.readyState === xhr.DONE) {
+			if (xhr.status === 200) {
+
+			} else {
+				
+			}
+		}
+	}	
+};
+
+document.getElementById('remote_ui_close').onclick = function () {
+	document.getElementById('remote_control').style.display = 'none';
+
+	var remote_ui = document.getElementById('remote_ui');
+	var iframe = document.querySelector('iframe');
+	remote_ui.removeChild(iframe);
+};
+
+
+
+
+
+
+rabbitHole.onevent = function (data) {
+	try {
+		var json = JSON.parse(data);
+		if (json.event === "ServiceAdded") {
+			document.getElementById(json.id).disabled = false;
+			return;
+		}
+		if (json.event === "ServiceRemoved") {
+			document.getElementById(json.id).disabled = true;
+			return;
+		}
+		if (json.event === "Disconnected") {
+			alert('Smart HUB disconnected');
+			return;
+		}
+	} catch (e) {
+		console.log('[ERROR]', e.message());
+	}
+};
+
+
+
+
+document.getElementById('socket_send').onclick = function () {
+	ws.send(document.getElementById('socket_text').value);
+}
+</script>
 
 </body>
 </html>
