modify javascript library

--- a/smart_network/sample_storage/devices/tromm/ui/index.html
+++ b/smart_network/sample_storage/devices/tromm/ui/index.html
@@ -260,8 +260,9 @@ function getStatus(data) {
 	refreshUI();
 }
 
-rabbitHole.request('get/status', '', getStatus, false);
-
+var req = new rabbitHole.Request('get/status');
+req.onresponse = getStatus;
+req.send();
 
 
 
