change Http::Object and Http::UIObject behavior - change Http::Object become mongoose wrapper object. - change Request rule of Http::UIObject   - remove prefix rule of request - static, common, do, x.   - every GET request return static files.     - find document root first, and common root next.     - if there is no file both of document root and common root, return 404.   - every POST request pass query to device, and wait return.     - need to solve Request object life cycle crash.

--- a/smart_network/sample_storage/devices/tromm/ui/index.html
+++ b/smart_network/sample_storage/devices/tromm/ui/index.html
@@ -152,7 +152,7 @@ data-angleArc=250 data-displayInput=false>
 
 <!-- body scripts -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-<script type="text/javascript" src="/common/js/rabbit_hole.js"></script>
+<script type="text/javascript" src="/static/js/rabbit_hole.js"></script>
 <script type="text/javascript" src="/static/jquery.knob.js"></script>
 <script type="text/javascript">
 
