--- a/smart_network/sample_storage/main/index.html
+++ b/smart_network/sample_storage/main/index.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Dashboard</title>
 
-<link rel="stylesheet" href="/common/css/rabbit_hole.css" type="text/css" media="all" />
+<link rel="stylesheet" href="/static/css/rabbit_hole.css" type="text/css" media="all" />
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
 
@@ -65,7 +65,7 @@
 </div>
 
 <!-- body scripts -->
-<script type="text/javascript" src="/common/js/rabbit_hole.js"></script>
+<script type="text/javascript" src="/static/js/rabbit_hole.js"></script>
 <script type="text/javascript">
 var urlList = {};
 var currentUI = false;
